--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js",
+    "start": "node app.js",
+    "dev": "node --watch app.js",
     "test": "vitest"
   },
   "imports": {
@@ -14,8 +14,8 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "supertest": "^7.1.0",
-    "vitest": "^3.0.9"
+    "supertest": "^7.1.4",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=22"
